Bug 840407 (part 2): Remove the "align" and "valign" attributes from extensions r/a=justdave

--- a/extensions/Voting/web/style.css
+++ b/extensions/Voting/web/style.css
@@ -19,3 +19,12 @@ tr.bz_bug_being_voted_on td {
 #votes_container { 
     white-space: nowrap; 
 }
+
+#user_votes th {
+    text-align: center;
+}
+
+#user_votes th, #user_votes td,
+#bug_votes th, #bug_votes td {
+    padding: 0.2em;
+}
